# rpi-cpp-template

./: CMakeLists.txt  Dockerfile  README.md
include/: other.h
scripts/: compile.sh
src/: main.cpp  other.cpp
